2010-02-12 19:35-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/CFPropertyList.m: Use stream length instead of bufferLength.
	Correction for compilation error.

2010-01-26 Fred Kiefer <fredkiefer@gmx.de>

	* Source/CFPropertyList.m: Fill in a bit more code.

2010-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CoreFoundation.h:
	* Headers/CoreFoundation/CFNumber.h:
	* Source/GNUmakefile:
	* Source/CFNumber.m: Added initial CFNumber implementation.

2010-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFArray.h:
	* Headers/CoreFoundation/CFDictionary.h: Made immutable and mutable
	versions of these class be the same structure.

2010-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStream.m: Fixed typo.

2010-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFString.h:
	* Headers/CoreFoundation/CFBase.h: Revert previous change, the correct
	place for CFSTR is in CFString.h.
	* Source/CFError.m: Include CFString.h.

2010-01-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFString.h: Moved CFSTR definition from here...
	* Headers/CoreFoundation/CFBase.h: To here.
	* Source/CFError.m:
	* Source/CFString.m: Use CFSTR() instead of @"".

2010-01-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CoreFoundation.h:
	* Headers/CoreFoundation/CFBase.h
	* Headers/CoreFoundation/CFPropertyList.h:
	* Source/GNUmakefile:
	* Source/CFPropertyList.m: Added rudimentary CFPropertyList
	implementaion

2010-01-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CoreFoundation.h:
	* Headers/CoreFoundation/CFStream.h:
	* Source/GNUmakefile:
	* Source/CFStream.m: Added CFStream implementation.

2010-01-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFString.h: Add availability macros.

2010-01-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBase.m:
	* Source/CFArray.m:
	* Source/CFData.m: